# bert_implementation

./: .gitignore  README.md  m.model  m.vocab  pyproject.toml  requirements.txt
data/: text.txt  val_text.txt
data_utils/: WikiDataset.py  baby_dataset.py
model/: bert.py
tokenizer/: tknz_30000.model  tknz_30000.vocab  tknz_50000.model  tknz_50000.vocab  train_sentencepiece.py
train/: get_text.py  sandbox.py  sandbox2.py  tokenizer.py  train_baby.py  train_berp.py
