[tool.poetry]
name = "bert-implementation"
version = "0.1.0"
description = ""
authors = ["Askar Sulaimanov <askarkg12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
black = "^24.10.0"
wandb = "^0.18.5"
tqdm = "^4.66.6"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
